Fixed #7367 - Unify style (horizontal alignment) for input components (dropdown, multiSelect)

--- a/src/app/components/dropdown/dropdown.css
+++ b/src/app/components/dropdown/dropdown.css
@@ -1,8 +1,8 @@
 .ui-dropdown {
-    display: inline-block;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     position: relative;
     cursor: pointer;
-    vertical-align: middle;
     min-width: 12.5em;
 }
 
